# trackedly

./: .gitignore  LICENSE.txt  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
customers/: api.py  forms.py  models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_initial.py  0003_customer_email.py
customers/templates/customers/: customer_delete_view.html  customer_update_view.html  (+1 more)
customers/tests/: test_api.py  test_views.py
entries/: api.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
entries/migrations/: 0001_initial.py  0002_initial.py
entries/templatetags/: entriestags.py
entries/tests/: test_api.py  test_forms.py  test_serializers.py  test_utils.py  test_views.py
projects/: api.py  forms.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py  0003_project_weekly_goal.py
projects/templatetags/: projectstags.py
projects/tests/: test_api.py  test_views.py
static/js/: customers.js  entries.js  main.js  projects.js  users.js
templates/: 404.html  index.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
trackedly/: asgi.py  settings.py  urls.py  views.py  wsgi.py
users/: api.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_user_is_email_confirmed_emailconfirmation.py
users/templatetags/: usertags.py
users/tests/: test_api.py  test_views.py
(+43 files in other folders)
